...
            value={counts.bridges}
            updates={updates.bridges}
            onPress={() => router.push('/bridges')}
          />
          <Divider />
          <CategoryRow
            testID="settings.category.trackers"
            icon={<TrackersIcon color={theme.textSecondary} size={22} />}
            title="Trackers"
            value={counts.trackers}
            updates={updates.trackers}
            onPress={() => router.push('/trackers')}
          />
...
